// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <Radio> Дефолтная 1`] = `
<div
  className="sc-bdVaJa cjORyY"
>
  <div
    checked={false}
    className="sc-bwzfXH kbJlne"
    color="blue"
    disabled={false}
  />
  <div
    checked={false}
    className="sc-htpNat hQFrKh"
    color="blue"
    disabled={false}
  />
</div>
`;

exports[`Верстка компонента <Radio> Зеленого цвета 1`] = `
<div
  className="sc-bdVaJa cjORyY"
>
  <div
    checked={false}
    className="sc-bwzfXH kbJlne"
    color="green"
    disabled={false}
  />
  <div
    checked={false}
    className="sc-htpNat hEyLbp"
    color="green"
    disabled={false}
  />
</div>
`;

exports[`Верстка компонента <Radio> Неактивная 1`] = `
<div
  className="sc-bdVaJa cjORyY"
>
  <div
    checked={false}
    className="sc-bwzfXH iKRUrJ"
    color="blue"
    disabled={true}
  />
  <div
    checked={false}
    className="sc-htpNat iIsfHI"
    color="blue"
    disabled={true}
  />
</div>
`;

exports[`Верстка компонента <Radio> Отмеченная 1`] = `
<div
  className="sc-bdVaJa cjORyY"
>
  <div
    checked={true}
    className="sc-bwzfXH bqyPxt"
    color="blue"
    disabled={false}
  />
  <div
    checked={true}
    className="sc-htpNat gWVkrB"
    color="blue"
    disabled={false}
  />
</div>
`;

exports[`Верстка компонента <Radio> Подсвеченная 1`] = `
<div
  className="sc-bdVaJa cjORyY"
>
  <div
    checked={false}
    className="sc-bwzfXH hKxzze"
    color="blue"
    disabled={false}
  />
  <div
    checked={false}
    className="sc-htpNat dQPlTf"
    color="blue"
    disabled={false}
  />
</div>
`;

exports[`Верстка компонента <Radio> Синего цвета 1`] = `
<div
  className="sc-bdVaJa cjORyY"
>
  <div
    checked={false}
    className="sc-bwzfXH kbJlne"
    color="blue"
    disabled={false}
  />
  <div
    checked={false}
    className="sc-htpNat hQFrKh"
    color="blue"
    disabled={false}
  />
</div>
`;

exports[`Верстка компонента <Radio> Увеличенный размер 1`] = `
<div
  className="sc-bdVaJa ddwLo"
>
  <div
    checked={false}
    className="sc-bwzfXH kbJlne"
    color="blue"
    disabled={false}
  />
  <div
    checked={false}
    className="sc-htpNat gtFvXH"
    color="blue"
    disabled={false}
  />
</div>
`;
